<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            style="@style/label_titulo"
            android:text="@string/dados_do_cliente" />

        <EditText
            style="@style/margin_lateral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/informe_o_nome_do_cliente"
            android:inputType="text" />

        <TextView
            style="@style/label_titulo"
            android:text="@string/escolha_a_s_pizzas_s" />

        <LinearLayout style="@style/container_horizontal">

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="@string/atum" />

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="@string/bacon" />

        </LinearLayout>

        <LinearLayout style="@style/container_horizontal">

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="@string/calabresa" />

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="@string/mussarela" />

        </LinearLayout>

        <TextView
            style="@style/label_titulo"
            android:text="@string/tamanho_da_pizza" />

        <RadioGroup
            style="@style/margin_lateral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/broto" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m_dia" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grande" />
        </RadioGroup>

        <TextView
            style="@style/label_titulo"
            android:text="@string/forma_de_pagamento" />

        <Spinner
            style="@style/margin_lateral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/formas_pagamento"/>

        <Button
            style="@style/label_titulo"
            android:background="@drawable/botao_personalizado"
            android:text="@string/calcular" />

    </LinearLayout>

</ScrollView>
